--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -54,11 +54,9 @@ jobs:
       # B) keyword が空なら、フォームの素材テキストをファイル化
       - name: Write material to file (when keyword empty)
         if: ${{ inputs.keyword == '' }}
-        run: |
-          mkdir -p inputs
-          cat > inputs/draft.md << 'EOF_MATERIAL'
-${{ github.event.inputs.material }}
-EOF_MATERIAL
+ 　　　　 run: |
+    　　　　mkdir -p inputs
+    　　　　printf "%s" "${{ github.event.inputs.material }}" > inputs/draft.md
 
       # ---- 第2段階：本記事生成 ----
       - name: Run pipeline
