--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -26,7 +26,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@v5
-        with: python-version: "3.11"
+        with:
+         python-version: "3.11"
       - name: Install deps
          run: pip install -r requirements.txt
       - name: Stage1 - make draft from Reddit (when keyword is given)
